--- a/app/src/index.css
+++ b/app/src/index.css
@@ -16,4 +16,7 @@ body {
 .Dashboard-anchor {
   display: inline-block; }
 
+.Order {
+  outline: solid 1px red; }
+
 /*# sourceMappingURL=index.css.map */
