Add OrderDetail Component and Match route for /orders/:id + restructured dummy order data

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -19,4 +19,7 @@ body {
 .Order {
   outline: solid 1px red; }
 
+.OrderList-Order-wrapper-anchor {
+  cursor: pointer; }
+
 /*# sourceMappingURL=index.css.map */
