--- a/app/src/index.css
+++ b/app/src/index.css
@@ -5,6 +5,9 @@ body {
   width: 100%;
   height: 100%; }
 
+.btn {
+  border: solid 1px black; }
+
 .Dashboard {
   outline: solid 1px blue; }
 
@@ -21,5 +24,16 @@ body {
 
 .OrderList-Order-wrapper-anchor {
   cursor: pointer; }
+
+.MachineNumber {
+  border: solid 1px black; }
+  .MachineNumber:not(:first-child) {
+    margin-top: 1em; }
+
+.PartNumbers-wrapper {
+  padding: 1em; }
+
+.PartNumber:not(:first-child) {
+  margin-top: 8px; }
 
 /*# sourceMappingURL=index.css.map */
