Add new mach num block functionality working properly

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -39,4 +39,7 @@ body {
 .OrderForm {
   border: solid 1px black; }
 
+.MachineNumberBlock {
+  outline: solid 1px #34C84A; }
+
 /*# sourceMappingURL=index.css.map */
