--- a/app/src/sass/index.scss
+++ b/app/src/sass/index.scss
@@ -53,6 +53,16 @@ body {
   border: solid 1px black;
 }
 
+.QuoteForm {
+  border: solid 1px black;
+}
+
 .MachineNumberBlock {
   outline: solid 1px #34C84A;
+  margin-left: 1em;
+}
+
+.PartNumberBlock {
+  outline: solid 1px #F0AB28;
+  margin-left: 2em;
 }
