Minor refactoring and styles

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -44,10 +44,22 @@ body {
 
 .MachineNumberBlock {
   outline: solid 1px #34C84A;
+  padding: 0.5em;
   margin-left: 1em; }
 
 .PartNumberBlock {
   outline: solid 1px #F0AB28;
-  margin-left: 2em; }
+  margin-top: 0.5em;
+  margin-left: 2em;
+  /* because the button is below the inputs,
+     the last input is actually nth-last-child(2) */
+  /* last input element */ }
+  .PartNumberBlock:not(:nth-last-child(2)) {
+    margin-bottom: 1.5em; }
+  .PartNumberBlock:nth-last-child(2) {
+    margin-bottom: 1em; }
+
+.quantity {
+  margin-top: 0.4em; }
 
 /*# sourceMappingURL=index.css.map */
