Add put request function and hook up AddPriceForm to put action on API

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -25,6 +25,10 @@ body {
 .OrderList-Order-wrapper-anchor {
   cursor: pointer; }
 
+.OrderPart {
+  outline: solid 1px blue;
+  margin: 1em; }
+
 .MachineNumber {
   border: solid 1px black; }
   .MachineNumber:not(:first-child) {
