--- a/app/src/sass/index.scss
+++ b/app/src/sass/index.scss
@@ -32,6 +32,11 @@ body {
   cursor: pointer;
 }
 
+.OrderPart {
+  outline: solid 1px blue;
+  margin: 1em;
+}
+
 .MachineNumber {
 
   border: solid 1px black;
