Add ability to add price to an OrderDetail

--- a/app/src/sass/index.scss
+++ b/app/src/sass/index.scss
@@ -37,6 +37,10 @@ body {
   margin: 1em;
 }
 
+.OrderPart-message {
+  border: solid 2px #F0AB28;
+}
+
 .MachineNumber {
 
   border: solid 1px black;
