--- a/app/src/index.css
+++ b/app/src/index.css
@@ -29,6 +29,9 @@ body {
   outline: solid 1px blue;
   margin: 1em; }
 
+.OrderPart-message {
+  border: solid 2px #F0AB28; }
+
 .MachineNumber {
   border: solid 1px black; }
   .MachineNumber:not(:first-child) {
