Add ShippingAddressForm component for adding shipping address to an order. Also modified Input component for handling maxCharLength and required vs not required inputs. TODO: link the submit function up with an API POST method

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -43,8 +43,9 @@ body {
 .PartNumber:not(:first-child) {
   margin-top: 8px; }
 
-.OrderForm {
-  border: solid 1px black; }
+.ShippingAddressForm {
+  outline: solid 1px blue;
+  margin: 1em; }
 
 .QuoteForm {
   border: solid 1px black; }
