--- a/app/src/sass/index.scss
+++ b/app/src/sass/index.scss
@@ -59,8 +59,9 @@ body {
   }
 }
 
-.OrderForm {
-  border: solid 1px black;
+.ShippingAddressForm {
+  outline: solid 1px blue;
+  margin: 1em;
 }
 
 .QuoteForm {
