--- a/app/src/sass/index.scss
+++ b/app/src/sass/index.scss
@@ -41,6 +41,11 @@ body {
   border: solid 2px #F0AB28;
 }
 
+.ShippingDetail {
+  outline: solid 1px black;
+  margin: 1em;
+}
+
 .MachineNumber {
 
   border: solid 1px black;
