--- a/app/src/css/components/Dashboard.css
+++ b/app/src/css/components/Dashboard.css
@@ -80,5 +80,8 @@
     margin-top: 0.7em;
     width: 100%;
     height: 2em; } }
+@media screen and (min-width: 468px) and (max-width: 768px) {
+  .Dashboard-header {
+    font-size: 2em; } }
 
 /*# sourceMappingURL=Dashboard.css.map */
