--- a/app/src/sass/components/Dashboard.scss
+++ b/app/src/sass/components/Dashboard.scss
@@ -70,3 +70,9 @@
     height: 2em;
   }
 }
+
+@media screen and (min-width: 468px) and (max-width: 768px) {
+  .Dashboard-header {
+    font-size: 2em;
+  }
+}
