--- a/app/src/sass/partials/_variables.scss
+++ b/app/src/sass/partials/_variables.scss
@@ -16,6 +16,8 @@ $c8: #1F1F1F;
 $App_bg_color: $c1;
 $Dashboard_bg_color: $c2;
 $Landing_bg_color: $c1;
+$OrderList_bg_color: $c1;
+$QuoteForm_bg_color: $c1;
 
 /* Element colors */
 $button_border_color: $c8;
