--- a/app/src/css/components/App.css
+++ b/app/src/css/components/App.css
@@ -26,6 +26,10 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0; }
 
+ul, ol {
+  margin: 0;
+  padding: 0; }
+
 .App {
   background-color: #F6F6F6;
   width: 100%;
