--- a/app/src/css/components/Landing.css
+++ b/app/src/css/components/Landing.css
@@ -15,6 +15,15 @@
   FONTS
 ***/
 .Landing {
-  background-color: #F6F6F6; }
+  background-color: #F6F6F6;
+  height: 100%;
+  position: relative; }
+  .Landing {
+    *zoom: 1; }
+  .Landing:before, .Landing:after {
+    content: "";
+    display: table; }
+  .Landing:after {
+    clear: both; }
 
 /*# sourceMappingURL=Landing.css.map */
