--- a/app/src/sass/components/App.scss
+++ b/app/src/sass/components/App.scss
@@ -14,6 +14,11 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
 }
 
+ul, ol {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   background-color: $App_bg_color;
   width: 100%;
