--- a/app/src/sass/components/App.scss
+++ b/app/src/sass/components/App.scss
@@ -22,7 +22,7 @@ ul, ol {
 .App {
   background-color: $App_bg_color;
   width: 100%;
-  max-width: $App_max_width;
   height: 100%;
   margin: auto;
+  margin-bottom: 1.5em;
 }
