--- a/app/src/css/components/Landing.css
+++ b/app/src/css/components/Landing.css
@@ -17,6 +17,9 @@
 .Landing {
   background-color: #F6F6F6;
   height: 100%;
+  width: 100%;
+  max-width: 1600px;
+  margin: auto;
   position: relative; }
   .Landing {
     *zoom: 1; }
