--- a/app/src/css/components/QuoteForm.css
+++ b/app/src/css/components/QuoteForm.css
@@ -16,6 +16,30 @@
 ***/
 .QuoteForm {
   background-color: #F6F6F6; }
+  .QuoteForm .content-wrapper {
+    background-color: #F6F6F6;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.16);
+    border-radius: 4px;
+    width: 96%;
+    margin: 0.5em auto;
+    margin-top: 1.5em; }
+    .QuoteForm .content-wrapper .header {
+      font-size: 1.6em;
+      background-color: #D7D7D7;
+      border-top-right-radius: 4px;
+      border-top-left-radius: 4px;
+      color: #000000;
+      text-align: center;
+      padding-top: 0.3em;
+      padding-bottom: 0.3em;
+      width: 100%; }
+      .QuoteForm .content-wrapper .header span {
+        display: inline-block;
+        margin: auto;
+        width: 79%;
+        padding-bottom: 0.15em;
+        border-bottom: solid 1px #000000;
+        text-transform: uppercase; }
 
 @media screen and (min-width: 768px) {
   .QuoteForm {
@@ -24,6 +48,9 @@
     right: 0;
     float: left;
     width: 50%;
-    height: 100%; } }
+    height: 100%; }
+    .QuoteForm .content-wrapper {
+      margin-top: 0;
+      margin: 0.5em auto; } }
 
 /*# sourceMappingURL=QuoteForm.css.map */
