--- a/app/src/sass/components/Dashboard.scss
+++ b/app/src/sass/components/Dashboard.scss
@@ -5,9 +5,15 @@
   background-color: $Dashboard_bg_color;
   height: 100%;
   width: calc(100% - (2 * #{$Dashboard_padding}));
-  position: relative;
   padding: $Dashboard_padding;
   @include micro-clearfix();
+  position: relative;
+  .content-wrapper {
+    width: 100%;
+    height: 100%;
+    max-width: $App_max_width;
+    margin: auto;
+  }
 }
 
 .Dashboard-header {
@@ -20,8 +26,11 @@
   display: inline-block;
   float: right;
   width: calc(100% - #{$Dashboard_header_width} - (#{$Dashboard_padding}/2));
+  max-width: 32em;
+  margin: auto;
   height: calc(100% - (2 * #{$Dashboard_padding}));
   position: absolute;
+  // right: 0;
 }
 
 .button {
@@ -62,10 +71,11 @@
   }
   .button-container {
     position: relative;
-    float: left;
+    float: none;
     clear: both;
     display: block;
-    margin-top: 0.7em;
+    margin: auto;
+    padding-top: 0.8em;
     width: 100%;
     height: 2em;
   }
