--- a/app/src/sass/components/OrderList.scss
+++ b/app/src/sass/components/OrderList.scss
@@ -2,12 +2,17 @@
 
 .OrderList {
   background-color: $OrderList_bg_color;
+  width: 100%;
+  max-width: $OrderList_max_width;
+  margin: auto;
 }
 
 @media screen and (min-width: 768px) {
   .OrderList {
-    float: left;
-    width: 50%;
-    height: 100%;
+    &:not(.admin) {
+      float: left;
+      width: 50%;
+      height: 100%;
+    }
   }
 }
