--- a/app/src/sass/components/QuoteForm.scss
+++ b/app/src/sass/components/QuoteForm.scss
@@ -2,6 +2,33 @@
 
 .QuoteForm {
   background-color: $QuoteForm_bg_color;
+  .content-wrapper {
+    background-color: $QuoteForm_bg_color;
+    box-shadow: 0px 1px 2px rgba(0,0,0,.16);
+    border-radius: $OrderSubList_border_radius;
+    width: 96%;
+    margin: 0.5em auto;
+    margin-top: 1.5em;
+    .header {
+      font-size: 1.6em;
+      background-color: $OrderSubList_header_bg_color;
+      border-top-right-radius: $OrderSubList_border_radius;
+      border-top-left-radius: $OrderSubList_border_radius;
+      color: $OrderSubList_header_color;
+      text-align: center;
+      padding-top: 0.3em;
+      padding-bottom: 0.3em;
+      width: 100%;
+      span {
+        display: inline-block;
+        margin: auto;
+        width: 79%;
+        padding-bottom: 0.15em;
+        border-bottom: solid 1px $OrderSubList_header_color;
+        text-transform: uppercase;
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -12,5 +39,9 @@
     float: left;
     width: 50%;
     height: 100%;
+    .content-wrapper {
+      margin-top: 0;
+      margin: 0.5em auto;
+    }
   }
 }
