--- a/app/src/sass/partials/_variables.scss
+++ b/app/src/sass/partials/_variables.scss
@@ -3,6 +3,7 @@
 ***/
 
 /* Grey scale */
+$c0: #FFFFFF;
 $c1: #F6F6F6;
 $c2: #D7D7D7;
 $c3: #B9B9B9;
@@ -11,12 +12,14 @@ $c5: #7B7B7B;
 $c6: #5C5C5C;
 $c7: #3D3D3D;
 $c8: #1F1F1F;
+$c9: #000000;
 
 /* Container colors */
 $App_bg_color: $c1;
 $Dashboard_bg_color: $c2;
 $Landing_bg_color: $c1;
 $OrderList_bg_color: $c1;
+$OrderSubList_bg_color: $c1;
 $QuoteForm_bg_color: $c1;
 
 /* Element colors */
@@ -24,6 +27,9 @@ $button_border_color: $c8;
 $button_bg_color: $c4;
 $button_border_hov_color: $c7;
 $button_bg_hov_color: $c5;
+$OrderSubList_header_bg_color: $c2;
+$OrderSubList_header_color: $c9;
+$OrderSubList_border_radius: 4px;
 
 /* --------------------- */
 
@@ -35,6 +41,7 @@ $button_bg_hov_color: $c5;
 $App_max_width: 1600px;
 $Dashboard_padding: 0.7em;
 $Dashboard_header_width: 70%;
+$OrderList_max_width: 1000px;
 
 /* Element measurements */
 $button_border_size: 1px;
