--- a/app/src/sass/partials/_variables.scss
+++ b/app/src/sass/partials/_variables.scss
@@ -37,6 +37,9 @@ $OrderSubList_border_radius: 4px;
   MEASUREMENTS
 ***/
 
+/* Media query breakpoints */
+$medium_screen_width: 768px;
+
 /* Container measurements */
 $App_max_width: 1600px;
 $Dashboard_padding: 0.7em;
