--- a/app/src/css/components/Dashboard.css
+++ b/app/src/css/components/Dashboard.css
@@ -8,6 +8,7 @@
 /***
   MEASUREMENTS
 ***/
+/* Media query breakpoints */
 /* Container measurements */
 /* Element measurements */
 /* --------------------- */
