--- a/app/src/css/components/OrderSubList.css
+++ b/app/src/css/components/OrderSubList.css
@@ -8,6 +8,7 @@
 /***
   MEASUREMENTS
 ***/
+/* Media query breakpoints */
 /* Container measurements */
 /* Element measurements */
 /* --------------------- */
@@ -21,7 +22,7 @@
   width: 96%;
   margin: 0.5em auto; }
   .OrderSubList .header {
-    font-size: 1.6em;
+    font-size: 1.2em;
     background-color: #D7D7D7;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
@@ -38,8 +39,10 @@
       border-bottom: solid 1px #000000;
       text-transform: uppercase; }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 900px) {
   .OrderSubList {
-    width: 94%; } }
+    width: 94%; }
+    .OrderSubList .header {
+      font-size: 1.6em; } }
 
 /*# sourceMappingURL=OrderSubList.css.map */
