--- a/app/src/sass/components/OrderSubList.scss
+++ b/app/src/sass/components/OrderSubList.scss
@@ -6,6 +6,7 @@
   border-radius: $OrderSubList_border_radius;
   width: 96%;
   margin: 0.5em auto;
+  padding-bottom: 0.2em;
   .header {
     font-size: 1.2em;
     background-color: $OrderSubList_header_bg_color;
