--- a/app/src/css/components/OrderSubList.css
+++ b/app/src/css/components/OrderSubList.css
@@ -20,7 +20,8 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.16);
   border-radius: 4px;
   width: 96%;
-  margin: 0.5em auto; }
+  margin: 0.5em auto;
+  padding-bottom: 0.2em; }
   .OrderSubList .header {
     font-size: 1.2em;
     background-color: #D7D7D7;
