--- a/app/src/css/components/QuoteForm.css
+++ b/app/src/css/components/QuoteForm.css
@@ -2,6 +2,7 @@
   COLOR PALLETTE
 ***/
 /* Grey scale */
+/* Other Colors */
 /* Container colors */
 /* Element colors */
 /* --------------------- */
