--- a/app/src/sass/mixins/_button.scss
+++ b/app/src/sass/mixins/_button.scss
@@ -1,4 +1,4 @@
-@mixin button($width) {
+@mixin button($width, $height: 100%) {
   & {
     background-color: $button_bg_color;
     border: solid $button_border_size;
@@ -6,7 +6,7 @@
     border-radius: $button_border_radius;
     cursor: pointer;
     display: table;
-    height: 100%;
+    height: $height;
     width: $width;
     text-align: center;
     span {
