Add minor style changes and add ToggledMessage component to display errors from invalid SignIn + handle session expiration

--- a/app/src/css/components/ToggledMessage.css
+++ b/app/src/css/components/ToggledMessage.css
@@ -68,6 +68,6 @@
   .ToggledMessage.success .content-wrapper {
     background-color: #39D900; }
   .ToggledMessage.error .content-wrapper {
-    background-color: #C80000; }
+    background-color: #D23427; }
 
 /*# sourceMappingURL=ToggledMessage.css.map */
