--- a/app/src/sass/partials/_variables.scss
+++ b/app/src/sass/partials/_variables.scss
@@ -16,7 +16,7 @@ $c9: #000000;
 
 /* Other Colors */
 $success_green: #39D900;
-$error_red: #C80000;
+$error_red: #D23427;
 
 /* Container colors */
 $App_bg_color: $c1;
