--- a/app/src/sass/components/OrderList.scss
+++ b/app/src/sass/components/OrderList.scss
@@ -1,6 +1,8 @@
 @import '../partials/variables';
+@import '../mixins/outline';
 
 .OrderList {
+  @include outline(red);
   background-color: $OrderList_bg_color;
   width: 100%;
   max-width: $OrderList_max_width;
