--- a/app/src/css/components/OrderList.css
+++ b/app/src/css/components/OrderList.css
@@ -21,6 +21,8 @@
   width: 100%;
   max-width: 1000px;
   margin: auto; }
+  .OrderList {
+    outline: dotted 1px red; }
 
 @media screen and (min-width: 900px) {
   .OrderList:not(.admin) {
