--- a/app/src/sass/components/OrderSubList.scss
+++ b/app/src/sass/components/OrderSubList.scss
@@ -1,6 +1,8 @@
 @import '../partials/variables';
+@import '../mixins/outline';
 
 .OrderSubList {
+  @include outline(blue);
   background-color: $OrderSubList_bg_color;
   box-shadow: 0px 1px 2px rgba(0,0,0,.16);
   border-radius: $OrderSubList_border_radius;
