--- a/app/src/sass/partials/_variables.scss
+++ b/app/src/sass/partials/_variables.scss
@@ -36,7 +36,7 @@ $button_border_hov_color: $c7;
 $button_bg_hov_color: $c5;
 $OrderSubList_header_bg_color: $c2;
 $OrderSubList_header_color: $c9;
-$OrderSubList_border_radius: 4px;
+$Order_border_color: $c2;
 
 /* --------------------- */
 
@@ -56,6 +56,8 @@ $OrderList_max_width: 1000px;
 /* Element measurements */
 $button_border_size: 1px;
 $button_border_radius: 4px;
+$OrderSubList_border_radius: 4px;
+$Order_border_radius: 4px;
 
 /* --------------------- */
 
