Add hide or show button on Order

--- a/app/src/css/components/Order.css
+++ b/app/src/css/components/Order.css
@@ -42,4 +42,9 @@
   .Order .status-message {
     outline: dotted 1px blue; }
 
+.OrderPart-wrapper.show {
+  display: block; }
+.OrderPart-wrapper.hide {
+  display: none; }
+
 /*# sourceMappingURL=Order.css.map */
