--- a/app/src/sass/components/Order.scss
+++ b/app/src/sass/components/Order.scss
@@ -15,3 +15,12 @@
     @include outline();
   }
 }
+
+.OrderPart-wrapper {
+  &.show {
+    display: block;
+  }
+  &.hide {
+    display: none;
+  }
+}
