--- a/app/src/css/components/OrderPart.css
+++ b/app/src/css/components/OrderPart.css
@@ -18,8 +18,6 @@
 ***/
 .OrderPart {
   outline: solid 1px #D7D7D7;
-  margin: 0.5em;
-  line-height: 1.4em;
-  padding: 0.4em; }
+  line-height: 1.4em; }
 
 /*# sourceMappingURL=OrderPart.css.map */
