--- a/app/src/sass/components/OrderPart.scss
+++ b/app/src/sass/components/OrderPart.scss
@@ -2,7 +2,7 @@
 
 .OrderPart {
   outline: solid 1px $c2;
-  margin: 0.5em;
+  // margin: 0.5em;
   line-height: 1.4em;
-  padding: 0.4em;
+  // padding: 0.4em;
 }
