--- a/app/src/css/components/Order.css
+++ b/app/src/css/components/Order.css
@@ -19,28 +19,61 @@
 .Order {
   border: solid 1px #D7D7D7;
   border-radius: 4px;
-  margin: 0.5em 0.3em;
-  padding: 0.3em; }
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.16);
+  margin: auto;
+  margin: 0.5em 0.8em;
+  padding: 0.3em;
+  padding-bottom: 2.2em;
+  position: relative; }
   .Order button {
-    background-color: #9A9A9A;
-    border: solid 1px;
-    border-color: #1F1F1F;
-    border-radius: 4px;
-    cursor: pointer;
-    display: table;
-    height: 100%;
-    width: 30%;
-    text-align: center; }
-    .Order button span {
-      display: table-cell;
-      vertical-align: middle;
+    margin-top: 0.3em;
+    margin-bottom: 0.4em; }
+    .Order button {
+      background-color: #9A9A9A;
+      border: solid 1px;
+      border-color: #1F1F1F;
+      border-radius: 4px;
+      cursor: pointer;
+      display: table;
+      height: 100%;
       width: 30%;
       text-align: center; }
-    .Order button:hover {
-      background-color: #7B7B7B;
-      border-color: #3D3D3D; }
-  .Order .status-message {
-    outline: dotted 1px blue; }
+      .Order button span {
+        display: table-cell;
+        vertical-align: middle;
+        width: 30%;
+        text-align: center; }
+      .Order button:hover {
+        background-color: #7B7B7B;
+        border-color: #3D3D3D; }
+    .Order button.reveal-details {
+      margin-top: 0.5em;
+      position: absolute;
+      bottom: 0.3em;
+      left: 0.3em;
+      height: 2em; }
+  .Order .content {
+    width: 68%; }
+  .Order .status-message.pending {
+    background: #5C5C5C;
+    position: absolute;
+    top: -0.06em;
+    right: -0.03em;
+    width: 24%;
+    min-width: 160px;
+    max-width: 190px;
+    height: calc(100% + 0.05em);
+    text-align: center;
+    color: #F6F6F6;
+    border-radius: 4px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0; }
+    .Order .status-message.pending div {
+      height: 100%;
+      display: table; }
+      .Order .status-message.pending div span {
+        display: table-cell;
+        vertical-align: middle; }
 
 .OrderPart-wrapper-transition-enter {
   transition: all 350ms ease-in-out;
