--- a/app/src/sass/components/Order.scss
+++ b/app/src/sass/components/Order.scss
@@ -6,13 +6,54 @@
   // @include outline(red, 2px);
   border: solid 1px $Order_border_color;
   border-radius: $Order_border_radius;
-  margin: 0.5em 0.3em;
+  box-shadow: 0px 1px 2px rgba(0,0,0,.16);
+  margin: auto;
+  margin: 0.5em 0.8em;
   padding: 0.3em;
+  padding-bottom: 2.2em;
+  position: relative;
   button {
     @include button(30%);
+    margin-top: 0.3em;
+    margin-bottom: 0.4em;
+    &.reveal-details {
+      margin-top: 0.5em;
+      position: absolute;
+      bottom: 0.3em;
+      left: 0.3em;
+      height: 2em;
+    }
+  }
+  .content {
+    width: 68%;
   }
   .status-message {
-    @include outline();
+    // @include outline();
+    &.pending {
+      background: $Order_status_message_bg_color;
+      // box-shadow: 0px 1px 2px rgba(0,0,0,.16);
+      position: absolute;
+      top: -0.06em;
+      right: -0.03em;
+      width: 24%;
+      min-width: 160px;
+      max-width: 190px;
+      height: calc(100% + 0.05em);
+      text-align: center;
+      color: $Order_status_message_color;
+      // border: solid 1px $Order_status_message_bg_color;
+      border-radius: $Order_status_message_border_radius;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      div {
+        height: 100%;
+        display: table;
+        span {
+          display: table-cell;
+          vertical-align: middle;
+        }
+      }
+    }
   }
 }
 
