--- a/app/src/sass/components/OrderList.scss
+++ b/app/src/sass/components/OrderList.scss
@@ -2,14 +2,14 @@
 @import '../mixins/outline';
 
 .OrderList {
-  @include outline(red);
+  // @include outline(red);
   background-color: $OrderList_bg_color;
   width: 100%;
   max-width: $OrderList_max_width;
   margin: auto;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1150px) {
   .OrderList {
     &:not(.admin) {
       float: left;
