--- a/app/src/sass/components/OrderSubList.scss
+++ b/app/src/sass/components/OrderSubList.scss
@@ -2,7 +2,7 @@
 @import '../mixins/outline';
 
 .OrderSubList {
-  @include outline(blue);
+  // @include outline(blue);
   background-color: $OrderSubList_bg_color;
   box-shadow: 0px 1px 2px rgba(0,0,0,.16);
   border-radius: $OrderSubList_border_radius;
@@ -31,7 +31,7 @@
   }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1150px) {
   .OrderSubList {
     width: 94%;
     .header {
