--- a/app/src/sass/partials/_variables.scss
+++ b/app/src/sass/partials/_variables.scss
@@ -37,6 +37,8 @@ $button_bg_hov_color: $c5;
 $OrderSubList_header_bg_color: $c2;
 $OrderSubList_header_color: $c9;
 $Order_border_color: $c2;
+$Order_status_message_bg_color: $c6;
+$Order_status_message_color: $c1;
 
 /* --------------------- */
 
@@ -58,6 +60,7 @@ $button_border_size: 1px;
 $button_border_radius: 4px;
 $OrderSubList_border_radius: 4px;
 $Order_border_radius: 4px;
+$Order_status_message_border_radius: 4px;
 
 /* --------------------- */
 
