--- a/app/src/css/components/App.css
+++ b/app/src/css/components/App.css
@@ -21,7 +21,7 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 4.5em);
   font-family: sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
