--- a/app/src/css/components/Dashboard.css
+++ b/app/src/css/components/Dashboard.css
@@ -21,7 +21,13 @@
   height: 100%;
   width: calc(100% - (2 * 0.7em));
   padding: 0.7em;
-  position: relative; }
+  position: relative;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+  height: 37px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10; }
   .Dashboard {
     *zoom: 1; }
   .Dashboard:before, .Dashboard:after {
@@ -32,13 +38,16 @@
   .Dashboard .content-wrapper {
     width: 100%;
     height: 100%;
-    max-width: 1600px;
-    margin: auto; }
+    max-width: calc(1600px - (2 * 0.7em));
+    margin: 0.7em;
+    margin: auto;
+    position: relative; }
 
 .Dashboard-header {
   float: left;
   width: 70%;
-  height: 100%; }
+  height: 100%;
+  margin-left: 0.425em; }
 
 .button-container {
   display: inline-block;
@@ -46,8 +55,9 @@
   width: calc(100% - 70% - (0.7em/2));
   max-width: 32em;
   margin: auto;
-  height: calc(100% - (2 * 0.7em));
-  position: absolute; }
+  height: 100%;
+  position: absolute;
+  margin-left: -0.925em; }
 
 .button {
   margin-left: 0.2em;
@@ -76,6 +86,12 @@
     margin-right: 0.2em; }
 
 @media screen and (max-width: 768px) {
+  .Dashboard {
+    position: relative;
+    height: auto; }
+    .Dashboard .content-wrapper {
+      position: static; }
+
   .Dashboard-header {
     font-size: 150%;
     font-size: 6.4vw;
