--- a/app/src/css/components/Landing.css
+++ b/app/src/css/components/Landing.css
@@ -18,11 +18,12 @@
 ***/
 .Landing {
   background-color: #F6F6F6;
-  height: 100%;
+  height: 600px;
   width: 100%;
   max-width: 1600px;
   margin: auto;
-  position: relative; }
+  position: relative;
+  margin-top: 4.5em; }
   .Landing {
     *zoom: 1; }
   .Landing:before, .Landing:after {
@@ -30,5 +31,9 @@
     display: table; }
   .Landing:after {
     clear: both; }
+
+@media screen and (max-width: 768px) {
+  .Landing {
+    margin-top: 0.75em; } }
 
 /*# sourceMappingURL=Landing.css.map */
