--- a/app/src/sass/components/App.scss
+++ b/app/src/sass/components/App.scss
@@ -5,7 +5,7 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - #{$Landing_padding_top});
   font-family: $main_font_family;
 }
 
