--- a/app/src/sass/components/Dashboard.scss
+++ b/app/src/sass/components/Dashboard.scss
@@ -6,14 +6,22 @@
   background-color: $Dashboard_bg_color;
   height: 100%;
   width: calc(100% - (2 * #{$Dashboard_padding}));
-  padding: $Dashboard_padding;
   @include micro-clearfix();
+  padding: $Dashboard_padding;
   position: relative;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+  height: 37px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
   .content-wrapper {
     width: 100%;
     height: 100%;
-    max-width: $App_max_width;
+    max-width: calc(#{$App_max_width} - (2 * #{$Dashboard_padding}));
+    margin: $Dashboard_padding;
     margin: auto;
+    position: relative;
   }
 }
 
@@ -21,6 +29,7 @@
   float: left;
   width: $Dashboard_header_width;
   height: 100%;
+  margin-left: 0.425em;
 }
 
 .button-container {
@@ -29,8 +38,9 @@
   width: calc(100% - #{$Dashboard_header_width} - (#{$Dashboard_padding}/2));
   max-width: 32em;
   margin: auto;
-  height: calc(100% - (2 * #{$Dashboard_padding}));
+  height: 100%;
   position: absolute;
+  margin-left: -0.925em;
   // right: 0;
 }
 
@@ -46,6 +56,13 @@
 }
 
 @media screen and (max-width: 768px) {
+  .Dashboard {
+    position: relative;
+    height: auto;
+    .content-wrapper {
+      position: static;
+    }
+  }
   .Dashboard-header {
     font-size: 150%;
     font-size: 6.4vw;
