--- a/app/src/sass/components/Landing.scss
+++ b/app/src/sass/components/Landing.scss
@@ -4,9 +4,16 @@
 .Landing {
   @include micro-clearfix();
   background-color: $Landing_bg_color;
-  height: 100%;
+  height: 600px;
   width: 100%;
   max-width: $App_max_width;
   margin: auto;
   position: relative;
+  margin-top: $Landing_padding_top;
+}
+
+@media screen and (max-width: 768px) {
+  .Landing {
+    margin-top: 0.75em;
+  }
 }
