--- a/app/src/sass/partials/_variables.scss
+++ b/app/src/sass/partials/_variables.scss
@@ -53,6 +53,7 @@ $medium_screen_width: 768px;
 $App_max_width: 1600px;
 $Dashboard_padding: 0.7em;
 $Dashboard_header_width: 70%;
+$Landing_padding_top: 4.5em;
 $OrderList_max_width: 1000px;
 
 /* Element measurements */
