--- a/app/src/sass/components/OrderPart.scss
+++ b/app/src/sass/components/OrderPart.scss
@@ -1,6 +1,85 @@
 @import '../partials/variables';
+@import '../mixins/outline';
+
+.OrderParts-wrapper {
+  border: solid 1px transparent;
+  .OrderParts-titles {
+    padding-top: 1em;
+    // @include outline(blue, 3px);
+    display: inline-block;
+    width: 100%;
+    div {
+      width: calc(23% - 3px);
+      &.shipped {
+        width: calc(11% - 3px);
+        font-size: 1em;
+      }
+      &.machine_serial_num {
+        width: calc(28% - 3px);
+      }
+      &.quantity {
+        width: calc(15% - 3px);
+      }
+      display: inline-block;
+      text-align: center;
+      &:not(:last-child) {
+        border-right: solid 1px black;
+      }
+      border-bottom: solid 1px black;
+    }
+  }
+  .OrderParts-final {
+    padding-bottom: 1em;
+    width: 100%;
+    display: inline-block;
+    div {
+      display: inline-block;
+      text-align: center;
+    }
+    .spacer {
+      width: calc(19.25% - 3px);
+      border-right: solid 1px black;
+    }
+    #spacer4 {
+      border-right: 0;
+    }
+    .price {
+      width: calc(23% - 3px);
+      border-left: solid 1px black;
+    }
+  }
+}
 
 .OrderPart {
-  outline: solid 1px $c2;
+  outline: solid 1px transparent;
   line-height: 1.4em;
+  height: calc(auto + 100px);
+  .content-wrapper {
+    .details {
+      // @include outline(blue, 3px);
+      display: inline-block;
+      width: 100%;
+      div {
+        display: inline-block;
+        width: calc(23% - 3px);
+        &.shipped {
+          width: calc(11% - 3px);
+        }
+        &.machine_serial_num {
+          width: calc(28% - 3px);
+        }
+        &.quantity {
+          width: calc(15% - 3px);
+        }
+        text-align: center;
+        &:not(:last-child) {
+          border-right: solid 1px black;
+        }
+        border-bottom: solid 1px $c4;
+      }
+      .machine_serial_num {
+        
+      }
+    }
+  }
 }
