--- a/app/src/sass/partials/_variables.scss
+++ b/app/src/sass/partials/_variables.scss
@@ -62,6 +62,7 @@ $button_border_radius: 4px;
 $OrderSubList_border_radius: 4px;
 $Order_border_radius: 4px;
 $Order_status_message_border_radius: 4px;
+$ShippingDetail_border_radius: 4px;
 
 /* --------------------- */
 
