--- a/app/src/css/components/SignIn.css
+++ b/app/src/css/components/SignIn.css
@@ -22,5 +22,31 @@
     outline: dotted 1px blue; }
   .SignIn form {
     outline: dotted 1px red; }
+  .SignIn form .form-group {
+    margin-top: 1em; }
+    .SignIn form .form-group {
+      outline: dotted 1px green; }
+
+@media screen and (min-width: 542px) {
+  .SignIn form {
+    width: 100%; }
+    .SignIn form {
+      *zoom: 1; }
+    .SignIn form:before, .SignIn form:after {
+      content: "";
+      display: table; }
+    .SignIn form:after {
+      clear: both; }
+    .SignIn form label, .SignIn form input {
+      display: block;
+      float: left;
+      width: 50%;
+      margin: 0.5em 0; }
+    .SignIn form label {
+      text-align: right;
+      padding-right: 1em; }
+    .SignIn form input {
+      max-width: 13em;
+      padding-left: 1em; } }
 
 /*# sourceMappingURL=SignIn.css.map */
