--- a/app/src/sass/components/SignIn.scss
+++ b/app/src/sass/components/SignIn.scss
@@ -1,4 +1,5 @@
 @import '../partials/variables';
+@import '../mixins/micro-clearfix';
 @import '../mixins/button';
 @import '../mixins/outline';
 
@@ -7,5 +8,35 @@
   text-align: center;
   form {
     @include outline(red);
+    .form-group {
+      @include outline(green);
+      margin-top: 1em;
+    }
+    button {
+      
+    }
+  }
+}
+
+@media screen and (min-width: 542px) {
+  .SignIn {
+    form {
+      @include micro-clearfix();
+      width: 100%;
+      label, input {
+        display: block;
+        float: left;
+        width: 50%;
+        margin: 0.5em 0;
+      }
+      label {
+        text-align: right;
+        padding-right: 1em;
+      }
+      input {
+        max-width: 13em;
+        padding-left: 1em;
+      }
+    }
   }
 }
