--- a/app/src/sass/components/App.scss
+++ b/app/src/sass/components/App.scss
@@ -6,7 +6,7 @@ html, body {
   padding: 0;
   width: 100%;
   height: calc(100% - #{$Landing_padding_top});
-  font-family: $main_font_family;
+  font-family: $raleway;
 }
 
 h1, h2, h3, h4, h5, h6 {
