--- a/app/src/sass/components/ToggledMessage.scss
+++ b/app/src/sass/components/ToggledMessage.scss
@@ -26,7 +26,9 @@
       font-size: 1.2em;
     }
     button {
-      @include button(auto, 60%);
+      @include button();
+      width: auto;
+      height: 60%;
       position: absolute;
       top: 0.56rem;
       left: 0.56rem;
