--- a/app/src/css/components/OrderPart.css
+++ b/app/src/css/components/OrderPart.css
@@ -77,6 +77,7 @@
           background-repeat: no-repeat;
           background-position: center;
           height: 100%;
+          min-width: 14px;
           border-bottom: none; }
       .OrderPart .content-wrapper .details div.machine_serial_num {
         width: calc(28% - 3px); }
