--- a/app/src/sass/components/OrderPart.scss
+++ b/app/src/sass/components/OrderPart.scss
@@ -45,7 +45,10 @@
     }
     .price {
       width: calc(23% - 3px);
+      // border-top: solid 1px black;
       border-left: solid 1px black;
+      // margin-top: 0.3em;
+      // padding-top: 0.3em;
     }
   }
 }
@@ -62,7 +65,8 @@
       div {
         display: inline-block;
         width: calc(23% - 3px);
-        // height: 2.2em;
+        // height: 10px;
+        // background-color: red;
         &.shipped {
           width: calc(11% - 3px);
           a {
@@ -77,6 +81,7 @@
             background-repeat: no-repeat;
             background-position: center;
             height: 100%;
+            min-width: 14px;
             border-bottom: none;
           }
         }
